--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root{
   --bg: #f0f2f5;
   --bg-scrollbar: #f0f2f5;
-  --bg-scrollbar-area: #3dd705;
+  --bg-scrollbar-area: #b5b6b8;
 
   --color-home-a: #183128;
   --color-home-h1: #014023;
@@ -80,8 +80,8 @@ ul, li{
   padding: 10px 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
 
 .menu-logo img{
